--- a/src/main/resources/com/example/demo/quizCreate.fxml
+++ b/src/main/resources/com/example/demo/quizCreate.fxml
@@ -21,7 +21,7 @@
                   <Insets left="10.0" top="10.0" />
                </HBox.margin>
                <image>
-                  <Image url="@logowithbg.png" />
+                  <Image url="@../../../logowithbg.png" />
                </image>
             </ImageView>
             <Pane prefHeight="64.0" prefWidth="589.0">
