--- a/src/main/resources/com/example/demo/booking.fxml
+++ b/src/main/resources/com/example/demo/booking.fxml
@@ -2,9 +2,9 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="1277.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.bookingController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="1131.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.bookingController">
    <top>
       <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: ffe4e1;" BorderPane.alignment="CENTER">
          <children>
@@ -23,7 +23,7 @@
                   <Insets left="10.0" top="10.0" />
                </HBox.margin>
                <image>
-                  <Image url="@logowithbg.png" />
+                  <Image url="@../../../logowithbg.png" />
                </image>
             </ImageView>
             <Pane maxWidth="-Infinity" prefHeight="74.0" prefWidth="506.0">
@@ -35,7 +35,7 @@
                <children>
                   <Button mnemonicParsing="false" onAction="#homeButton" prefHeight="73.0" prefWidth="78.0" style="-fx-background-color: none;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Home">
                      <HBox.margin>
-                        <Insets left="10.0" />
+                        <Insets />
                      </HBox.margin>
                      <font>
                         <Font name="Arial Rounded MT Bold" size="12.0" />
@@ -256,7 +256,7 @@
       </ScrollPane>
    </center>
    <right>
-      <VBox prefHeight="659.0" prefWidth="1013.0" style="-fx-background-color: fddde6;" BorderPane.alignment="CENTER">
+      <VBox prefHeight="659.0" prefWidth="821.0" style="-fx-background-color: fddde6;" BorderPane.alignment="CENTER">
          <children>
             <Text fill="#374a72" strokeType="OUTSIDE" strokeWidth="0.0" text="Booking">
                <font>
@@ -271,7 +271,7 @@
                   <Insets left="20.0" right="40.0" top="20.0" />
                </VBox.margin>
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Enter Destination ID for Booking:">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Destination ID for Booking:">
                      <font>
                         <Font name="Arial Rounded MT Bold" size="15.0" />
                      </font>
@@ -279,11 +279,11 @@
                         <Insets left="20.0" top="20.0" />
                      </VBox.margin>
                   </Text>
-                  <TextField>
+                  <ChoiceBox fx:id="destinationChoiceBox" prefHeight="25.0" prefWidth="191.33333333333334">
                      <VBox.margin>
-                        <Insets left="20.0" right="20.0" top="10.0" />
+                        <Insets left="20.0" top="10.0" />
                      </VBox.margin>
-                  </TextField>
+                  </ChoiceBox>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Available Time Slot">
                      <font>
                         <Font name="Arial Rounded MT Bold" size="15.0" />
@@ -292,7 +292,7 @@
                         <Insets left="20.0" top="30.0" />
                      </VBox.margin>
                   </Text>
-                  <TextArea prefHeight="200.0" prefWidth="200.0">
+                  <TextArea fx:id="timeSlotsTextArea" prefHeight="200.0" prefWidth="200.0">
                      <VBox.margin>
                         <Insets left="20.0" right="20.0" top="10.0" />
                      </VBox.margin>
@@ -305,11 +305,11 @@
                         <Insets left="20.0" top="20.0" />
                      </VBox.margin>
                   </Text>
-                  <TextField prefHeight="25.0" prefWidth="219.0" promptText="DD/MM/YYYY">
+                  <ChoiceBox fx:id="timeSlotBooking" prefHeight="25.0" prefWidth="191.33333333333334">
                      <VBox.margin>
-                        <Insets left="20.0" right="750.0" top="10.0" />
+                        <Insets left="20.0" top="10.0" />
                      </VBox.margin>
-                  </TextField>
+                  </ChoiceBox>
                   <Button mnemonicParsing="false" text="Booking">
                      <VBox.margin>
                         <Insets bottom="20.0" left="250.0" right="100.0" top="-26.0" />
