--- a/src/main/resources/com/example/demo/eventView.fxml
+++ b/src/main/resources/com/example/demo/eventView.fxml
@@ -23,7 +23,7 @@
                   <Insets left="10.0" top="10.0" />
                </HBox.margin>
                <image>
-                  <Image url="@logowithbg.png" />
+                  <Image url="@../../../logowithbg.png" />
                </image>
             </ImageView>
             <Pane prefHeight="73.0" prefWidth="594.0">
@@ -678,9 +678,6 @@
                      </VBox.margin>
                   </VBox>
                </children>
-               <padding>
-                  <Insets right="2.0" />
-               </padding>
             </VBox>
          </content>
          <BorderPane.margin>
