--- a/src/main/resources/com/example/demo/login.fxml
+++ b/src/main/resources/com/example/demo/login.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" prefHeight="704.0" prefWidth="1222.0" style="-fx-background-color: ffe4e1;" stylesheets="@../../../CssStyle/login.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.loginController">
+<VBox alignment="CENTER" prefHeight="704.0" prefWidth="1222.0" style="-fx-background-color: ffe4e1;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.loginController">
    <children>
       <Button mnemonicParsing="false" onAction="#closeButton" style="-fx-background-color: none;" styleClass="exit" stylesheets="@../../../CssStyle/home.css" text="Exit" textFill="#cc3366">
          <VBox.margin>
@@ -25,7 +25,7 @@
       </Button>
       <ImageView fitHeight="102.0" fitWidth="242.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@logowithbg.png" />
+            <Image url="@../../../logowithbg.png" />
          </image>
          <VBox.margin>
             <Insets top="60.0" />
