--- a/src/main/resources/com/example/demo/personalProfilePa.fxml
+++ b/src/main/resources/com/example/demo/personalProfilePa.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="473.0" prefWidth="657.0" style="-fx-background-color: ffdde6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="473.0" prefWidth="657.0" style="-fx-background-color: ffdde6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.personalProfilePaController">
    <children>
       <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: ffe4e1;">
          <children>
@@ -152,7 +152,7 @@
                   <Insets left="40.0" top="20.0" />
                </VBox.margin>
             </Text>
-            <Label fx:id="point" text="Label">
+            <Label fx:id="booking" text="Label">
                <VBox.margin>
                   <Insets left="200.0" top="-18.0" />
                </VBox.margin>
