--- a/src/main/resources/com/example/demo/personalProfileEdu.fxml
+++ b/src/main/resources/com/example/demo/personalProfileEdu.fxml
@@ -152,7 +152,7 @@
                   <Insets left="40.0" top="20.0" />
                </VBox.margin>
             </Text>
-            <Label fx:id="point" text="Label">
+            <Label fx:id="event" text="Label">
                <VBox.margin>
                   <Insets left="200.0" top="-18.0" />
                </VBox.margin>
@@ -165,7 +165,7 @@
                   <Insets left="40.0" top="20.0" />
                </VBox.margin>
             </Text>
-            <Label fx:id="point1" text="Label">
+            <Label fx:id="quiz" text="Label">
                <VBox.margin>
                   <Insets left="200.0" top="-18.0" />
                </VBox.margin>
