--- a/src/main/resources/com/example/demo/ProfileEdu.fxml
+++ b/src/main/resources/com/example/demo/ProfileEdu.fxml
@@ -2,8 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
@@ -12,8 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="490.0" prefWidth="705.0" style="-fx-background-color: fddde6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.bookingController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="473.0" prefWidth="657.0" style="-fx-background-color: ffdde6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.personalProfileEduController">
    <children>
       <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: ffe4e1;">
          <children>
@@ -25,16 +23,16 @@
                   <Image url="@../../../logowithbg.png" />
                </image>
             </ImageView>
-            <Pane maxWidth="-Infinity" prefHeight="74.0" prefWidth="506.0">
+            <Pane prefHeight="73.0" prefWidth="594.0">
                <HBox.margin>
                   <Insets left="100.0" />
                </HBox.margin>
             </Pane>
-            <HBox alignment="TOP_RIGHT" prefHeight="73.0" prefWidth="557.0">
+            <HBox alignment="TOP_RIGHT" prefHeight="73.0" prefWidth="772.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#homeButton" prefHeight="73.0" prefWidth="78.0" style="-fx-background-color: none;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Home">
+                  <Button mnemonicParsing="false" onAction="#homeButton" prefHeight="73.0" prefWidth="78.0" style="-fx-background-color: NONE;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Home">
                      <HBox.margin>
-                        <Insets />
+                        <Insets left="10.0" />
                      </HBox.margin>
                      <font>
                         <Font name="Arial Rounded MT Bold" size="12.0" />
@@ -56,7 +54,7 @@
                         <Font name="Arial Rounded MT Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#bookingButton" prefHeight="73.0" prefWidth="81.0" style="-fx-background-color: ffb6c1;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Booking">
+                  <Button mnemonicParsing="false" onAction="#bookingButton" prefHeight="73.0" prefWidth="81.0" style="-fx-background-color: none;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Booking">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
@@ -72,7 +70,7 @@
                         <Font name="Arial Rounded MT Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#profileButton" prefHeight="77.0" prefWidth="63.0" style="-fx-background-color: none;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Profile">
+                  <Button mnemonicParsing="false" onAction="#profileButton" prefHeight="77.0" prefWidth="63.0" style="-fx-background-color: ffb6c1;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Profile">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
@@ -92,63 +90,89 @@
             </HBox>
          </children>
       </HBox>
-      <Text fill="#374a72" strokeType="OUTSIDE" strokeWidth="0.0" text="Booking">
-         <font>
-            <Font name="Showcard Gothic" size="50.0" />
-         </font>
-         <VBox.margin>
-            <Insets top="30.0" />
-         </VBox.margin>
-      </Text>
-      <VBox prefHeight="436.0" prefWidth="1219.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
+      <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="300.0" prefWidth="815.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Destination ID for Booking:">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Email">
                <font>
                   <Font name="Arial Rounded MT Bold" size="15.0" />
                </font>
                <VBox.margin>
-                  <Insets left="20.0" top="20.0" />
+                  <Insets left="40.0" top="40.0" />
                </VBox.margin>
             </Text>
-            <ChoiceBox fx:id="destinationChoiceBox" prefHeight="25.0" prefWidth="191.33333333333334">
+            <Label fx:id="email" text="Label">
                <VBox.margin>
-                  <Insets left="20.0" top="10.0" />
+                  <Insets left="200.0" top="-18.0" />
                </VBox.margin>
-            </ChoiceBox>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Available Time Slot">
+            </Label>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username">
                <font>
                   <Font name="Arial Rounded MT Bold" size="15.0" />
                </font>
                <VBox.margin>
-                  <Insets left="20.0" top="30.0" />
+                  <Insets left="40.0" top="20.0" />
                </VBox.margin>
             </Text>
-            <TextArea fx:id="timeSlotsTextArea" prefHeight="200.0" prefWidth="200.0">
+            <Label fx:id="username" text="Label">
                <VBox.margin>
-                  <Insets left="20.0" right="20.0" top="10.0" />
+                  <Insets left="200.0" top="-18.0" />
                </VBox.margin>
-            </TextArea>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Enter a Time Slot：">
+            </Label>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="👤  Role">
                <font>
                   <Font name="Arial Rounded MT Bold" size="15.0" />
                </font>
                <VBox.margin>
-                  <Insets left="20.0" top="20.0" />
+                  <Insets left="40.0" top="60.0" />
                </VBox.margin>
             </Text>
-            <ChoiceBox fx:id="timeSlotBooking" prefHeight="25.0" prefWidth="191.33333333333334">
+            <Label fx:id="role" text="Label">
                <VBox.margin>
-                  <Insets left="20.0" top="10.0" />
+                  <Insets left="200.0" top="-18.0" />
                </VBox.margin>
-            </ChoiceBox>
-            <Button mnemonicParsing="false" text="Booking">
+            </Label>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="📍  Coordinate">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="15.0" />
+               </font>
                <VBox.margin>
-                  <Insets bottom="20.0" left="250.0" right="100.0" top="-26.0" />
+                  <Insets left="40.0" top="20.0" />
                </VBox.margin>
-            </Button>
+            </Text>
+            <Label fx:id="coords" text="Label">
+               <VBox.margin>
+                  <Insets left="200.0" top="-18.0" />
+               </VBox.margin>
+            </Label>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="⛀  Created Event">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="15.0" />
+               </font>
+               <VBox.margin>
+                  <Insets left="40.0" top="20.0" />
+               </VBox.margin>
+            </Text>
+            <Label fx:id="event" text="Label">
+               <VBox.margin>
+                  <Insets left="200.0" top="-18.0" />
+               </VBox.margin>
+            </Label>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="❓  Created Quiz">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="15.0" />
+               </font>
+               <VBox.margin>
+                  <Insets left="40.0" top="20.0" />
+               </VBox.margin>
+            </Text>
+            <Label fx:id="quiz" text="Label">
+               <VBox.margin>
+                  <Insets left="200.0" top="-18.0" />
+               </VBox.margin>
+            </Label>
          </children>
          <VBox.margin>
-            <Insets left="300.0" right="300.0" top="20.0" />
+            <Insets bottom="100.0" top="100.0" />
          </VBox.margin>
       </VBox>
    </children>
