--- a/src/main/resources/com/example/demo/ProfileYS.fxml
+++ b/src/main/resources/com/example/demo/ProfileYS.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -13,11 +14,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="526.0" prefWidth="1266.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.friendRequestController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="526.0" prefWidth="1266.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.personalProfileYSController">
    <top>
       <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: ffe4e1;" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="53.0" fitWidth="165.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="53.0" fitWidth="148.0" pickOnBounds="true" preserveRatio="true">
                <HBox.margin>
                   <Insets left="10.0" top="10.0" />
                </HBox.margin>
@@ -25,14 +26,14 @@
                   <Image url="@../../../logowithbg.png" />
                </image>
             </ImageView>
-            <Pane prefHeight="73.0" prefWidth="506.0">
+            <Pane prefHeight="73.0" prefWidth="594.0">
                <HBox.margin>
                   <Insets left="100.0" />
                </HBox.margin>
             </Pane>
             <HBox alignment="TOP_RIGHT" prefHeight="73.0" prefWidth="772.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#homeButton" prefHeight="73.0" prefWidth="78.0" style="-fx-background-color: none;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Home">
+                  <Button mnemonicParsing="false" onAction="#homeButton" prefHeight="73.0" prefWidth="78.0" style="-fx-background-color: NONE;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Home">
                      <HBox.margin>
                         <Insets left="10.0" />
                      </HBox.margin>
@@ -94,21 +95,26 @@
       </HBox>
    </top>
    <center>
-      <VBox prefHeight="453.0" prefWidth="836.0" style="-fx-background-color: FFDDE6;" BorderPane.alignment="CENTER_LEFT">
+      <VBox prefHeight="482.0" prefWidth="931.0" style="-fx-background-color: ffdde6;" BorderPane.alignment="CENTER_LEFT">
          <children>
-            <Text fill="#374a72" strokeType="OUTSIDE" strokeWidth="0.0" text="Friend Request">
-               <font>
-                  <Font name="Showcard Gothic" size="35.0" />
-               </font>
+            <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="300.0" prefWidth="815.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
                <VBox.margin>
-                  <Insets left="150.0" top="40.0" />
-               </VBox.margin>
-            </Text>
-            <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="115.0" prefWidth="765.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
-               <VBox.margin>
-                  <Insets right="100.0" top="40.0" />
+                  <Insets top="70.0" />
                </VBox.margin>
                <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Email">
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="15.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets left="40.0" top="40.0" />
+                     </VBox.margin>
+                  </Text>
+                  <Label fx:id="email" text="Label">
+                     <VBox.margin>
+                        <Insets left="200.0" top="-18.0" />
+                     </VBox.margin>
+                  </Label>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username">
                      <font>
                         <Font name="Arial Rounded MT Bold" size="15.0" />
@@ -117,21 +123,50 @@
                         <Insets left="40.0" top="20.0" />
                      </VBox.margin>
                   </Text>
-                  <Button mnemonicParsing="false" text="Reject">
+                  <Label fx:id="username" text="Label">
                      <VBox.margin>
-                        <Insets left="600.0" top="25.0" />
+                        <Insets left="200.0" top="-18.0" />
                      </VBox.margin>
-                  </Button>
-                  <Button mnemonicParsing="false" text="Accept">
+                  </Label>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="👤  Role">
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="15.0" />
+                     </font>
                      <VBox.margin>
-                        <Insets left="670.0" top="-26.0" />
+                        <Insets left="40.0" top="60.0" />
                      </VBox.margin>
-                  </Button>
-                  <Button mnemonicParsing="false" text="View Profile">
+                  </Text>
+                  <Label fx:id="role" text="Label">
                      <VBox.margin>
-                        <Insets left="40.0" top="-25.0" />
+                        <Insets left="200.0" top="-18.0" />
                      </VBox.margin>
-                  </Button>
+                  </Label>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="📍  Coordinate">
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="15.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets left="40.0" top="20.0" />
+                     </VBox.margin>
+                  </Text>
+                  <Label fx:id="coords" text="Label">
+                     <VBox.margin>
+                        <Insets left="200.0" top="-18.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="⛀  Current Point">
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="15.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets left="40.0" top="20.0" />
+                     </VBox.margin>
+                  </Text>
+                  <Label fx:id="point" text="Label">
+                     <VBox.margin>
+                        <Insets left="200.0" top="-18.0" />
+                     </VBox.margin>
+                  </Label>
                </children>
             </VBox>
          </children>
@@ -141,40 +176,29 @@
       </VBox>
    </center>
    <left>
-      <VBox prefHeight="453.0" prefWidth="335.0" style="-fx-background-color: FFDDE6;" BorderPane.alignment="CENTER">
+      <VBox prefHeight="453.0" prefWidth="335.0" style="-fx-background-color: ffdde6;" BorderPane.alignment="CENTER">
          <children>
-            <SplitPane dividerPositions="0.34415584415584416, 0.7240259740259739" maxWidth="-Infinity" orientation="VERTICAL" prefHeight="152.0" prefWidth="220.0">
+            <SplitPane dividerPositions="0.3370535714285715" maxWidth="-Infinity" orientation="VERTICAL" prefHeight="109.0" prefWidth="213.0">
+               <VBox.margin>
+                  <Insets left="50.0" right="20.0" top="80.0" />
+               </VBox.margin>
                <items>
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #FFFFCC;">
+                  <AnchorPane maxWidth="-Infinity" prefHeight="35.0" prefWidth="225.0" style="-fx-background-color: #FFFFCC;">
                      <children>
-                        <Button layoutX="-3.0" layoutY="-0.6666666666666666" mnemonicParsing="false" onAction="#profileButton" prefHeight="47.0" prefWidth="222.0" style="-fx-background-color: efbbcc;" styleClass="side" stylesheets="@../../../CssStyle/home.css" text="Profile" AnchorPane.topAnchor="-1.0">
-                           <font>
-                              <Font name="Arial Rounded MT Bold" size="12.0" />
-                           </font></Button>
+                        <Button layoutX="-3.0" layoutY="-0.6666666666666666" mnemonicParsing="false" onAction="#profileButton" prefHeight="47.0" prefWidth="222.0" style="-fx-background-color: efbbcc;" styleClass="side" stylesheets="@../../../CssStyle/home.css" text="Profile" AnchorPane.topAnchor="-1.0" />
                      </children>
                   </AnchorPane>
-                  <AnchorPane prefHeight="47.0" prefWidth="207.0" style="-fx-background-color: #FFFFCC;">
+                  <AnchorPane prefHeight="200.0" prefWidth="219.0" style="-fx-background-color: #FFFFCC;">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#friendRequestStartUp" prefHeight="47.0" prefWidth="219.0" style="-fx-background-color: efbbcc;" styleClass="side" stylesheets="@../../../CssStyle/home.css" text="Request">
-                           <font>
-                              <Font name="Arial Rounded MT Bold" size="12.0" />
-                           </font></Button>
-                     </children>
-                  </AnchorPane>
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #FFFFCC;">
-                     <children>
-                        <Button mnemonicParsing="false" onAction="#friendButton" prefHeight="50.0" prefWidth="219.0" style="-fx-background-color: efbbcc;" styleClass="side" stylesheets="@../../../CssStyle/home.css" text="Friend">
-                           <font>
-                              <Font name="Arial Rounded MT Bold" size="12.0" />
-                           </font></Button>
+                        <Button mnemonicParsing="false" onAction="#friendButton" prefHeight="52.0" prefWidth="219.0" style="-fx-background-color: efbbcc;" styleClass="side" stylesheets="@../../../CssStyle/home.css" text="Friend" />
                      </children>
                   </AnchorPane>
                </items>
-               <VBox.margin>
-                  <Insets left="50.0" right="20.0" top="120.0" />
-               </VBox.margin>
             </SplitPane>
          </children>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
       </VBox>
    </left>
 </BorderPane>
