--- a/src/main/resources/com/example/demo/booking2 (2).fxml
+++ b/src/main/resources/com/example/demo/booking2 (2).fxml
@@ -2,10 +2,11 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -13,11 +14,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="526.0" prefWidth="1266.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.friendRequestController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="897.0" prefWidth="1131.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.bookingController">
    <top>
       <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: ffe4e1;" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="53.0" fitWidth="165.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="53.0" fitWidth="148.0" pickOnBounds="true" preserveRatio="true">
                <HBox.margin>
                   <Insets left="10.0" top="10.0" />
                </HBox.margin>
@@ -25,16 +26,16 @@
                   <Image url="@../../../logowithbg.png" />
                </image>
             </ImageView>
-            <Pane prefHeight="73.0" prefWidth="506.0">
+            <Pane maxWidth="-Infinity" prefHeight="74.0" prefWidth="506.0">
                <HBox.margin>
                   <Insets left="100.0" />
                </HBox.margin>
             </Pane>
-            <HBox alignment="TOP_RIGHT" prefHeight="73.0" prefWidth="772.0">
+            <HBox alignment="TOP_RIGHT" prefHeight="73.0" prefWidth="557.0">
                <children>
                   <Button mnemonicParsing="false" onAction="#homeButton" prefHeight="73.0" prefWidth="78.0" style="-fx-background-color: none;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Home">
                      <HBox.margin>
-                        <Insets left="10.0" />
+                        <Insets />
                      </HBox.margin>
                      <font>
                         <Font name="Arial Rounded MT Bold" size="12.0" />
@@ -56,7 +57,7 @@
                         <Font name="Arial Rounded MT Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#bookingButton" prefHeight="73.0" prefWidth="81.0" style="-fx-background-color: none;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Booking">
+                  <Button mnemonicParsing="false" onAction="#bookingButton" prefHeight="73.0" prefWidth="81.0" style="-fx-background-color: ffb6c1;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Booking">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
@@ -72,7 +73,7 @@
                         <Font name="Arial Rounded MT Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#profileButton" prefHeight="77.0" prefWidth="63.0" style="-fx-background-color: ffb6c1;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Profile">
+                  <Button mnemonicParsing="false" onAction="#profileButton" prefHeight="77.0" prefWidth="63.0" style="-fx-background-color: none;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Profile">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
@@ -94,87 +95,86 @@
       </HBox>
    </top>
    <center>
-      <VBox prefHeight="453.0" prefWidth="836.0" style="-fx-background-color: FFDDE6;" BorderPane.alignment="CENTER_LEFT">
+      <ScrollPane hbarPolicy="NEVER" prefHeight="659.0" prefWidth="477.0" BorderPane.alignment="CENTER">
+         <content>
+            <VBox alignment="TOP_CENTER" prefHeight="1041.0" prefWidth="749.0" style="-fx-background-color: fddde6;">
+               <children>
+                  <VBox prefHeight="667.0" prefWidth="329.0" style="-fx-background-color: rgba(255,255,255.5); -fx-background-radius: 20;">
+                     <VBox.margin>
+                        <Insets left="20.0" right="400.0" top="30.0" />
+                     </VBox.margin>
+                     <children>
+                        <TextArea fx:id="choice" editable="false" prefHeight="683.0" prefWidth="329.0" style="-fx-background-color: transparent;" styleClass="textarea" stylesheets="@../../../CssStyle/home.css" text="111111111111111111111&#10;11111&#10;11111&#10;111&#10;1&#10;1&#10;" />
+                     </children>
+                  </VBox>
+               </children>
+            </VBox>
+         </content>
+      </ScrollPane>
+   </center>
+   <right>
+      <VBox prefHeight="659.0" prefWidth="887.0" style="-fx-background-color: fddde6;" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="#374a72" strokeType="OUTSIDE" strokeWidth="0.0" text="Friend Request">
+            <Text fill="#374a72" strokeType="OUTSIDE" strokeWidth="0.0" text="Booking">
                <font>
-                  <Font name="Showcard Gothic" size="35.0" />
+                  <Font name="Showcard Gothic" size="50.0" />
                </font>
                <VBox.margin>
-                  <Insets left="150.0" top="40.0" />
+                  <Insets left="20.0" top="30.0" />
                </VBox.margin>
             </Text>
-            <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="115.0" prefWidth="765.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
+            <VBox prefHeight="436.0" prefWidth="1219.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
                <VBox.margin>
-                  <Insets right="100.0" top="40.0" />
+                  <Insets left="20.0" right="40.0" top="20.0" />
                </VBox.margin>
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Destination ID for Booking:">
                      <font>
                         <Font name="Arial Rounded MT Bold" size="15.0" />
                      </font>
                      <VBox.margin>
-                        <Insets left="40.0" top="20.0" />
+                        <Insets left="20.0" top="20.0" />
                      </VBox.margin>
                   </Text>
-                  <Button mnemonicParsing="false" text="Reject">
+                  <ChoiceBox fx:id="destinationChoiceBox" prefHeight="25.0" prefWidth="191.33333333333334">
                      <VBox.margin>
-                        <Insets left="600.0" top="25.0" />
+                        <Insets left="20.0" top="10.0" />
                      </VBox.margin>
-                  </Button>
-                  <Button mnemonicParsing="false" text="Accept">
+                  </ChoiceBox>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Available Time Slot">
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="15.0" />
+                     </font>
                      <VBox.margin>
-                        <Insets left="670.0" top="-26.0" />
+                        <Insets left="20.0" top="30.0" />
                      </VBox.margin>
-                  </Button>
-                  <Button mnemonicParsing="false" text="View Profile">
+                  </Text>
+                  <TextArea fx:id="timeSlotsTextArea" prefHeight="200.0" prefWidth="200.0">
                      <VBox.margin>
-                        <Insets left="40.0" top="-25.0" />
+                        <Insets left="20.0" right="20.0" top="10.0" />
+                     </VBox.margin>
+                  </TextArea>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Enter a Time Slot：">
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="15.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets left="20.0" top="20.0" />
+                     </VBox.margin>
+                  </Text>
+                  <ChoiceBox fx:id="timeSlotBooking" prefHeight="25.0" prefWidth="191.33333333333334">
+                     <VBox.margin>
+                        <Insets left="20.0" top="10.0" />
+                     </VBox.margin>
+                  </ChoiceBox>
+                  <Button mnemonicParsing="false" text="Booking">
+                     <VBox.margin>
+                        <Insets bottom="20.0" left="250.0" right="100.0" top="-26.0" />
                      </VBox.margin>
                   </Button>
                </children>
             </VBox>
          </children>
-         <BorderPane.margin>
-            <Insets />
-         </BorderPane.margin>
       </VBox>
-   </center>
-   <left>
-      <VBox prefHeight="453.0" prefWidth="335.0" style="-fx-background-color: FFDDE6;" BorderPane.alignment="CENTER">
-         <children>
-            <SplitPane dividerPositions="0.34415584415584416, 0.7240259740259739" maxWidth="-Infinity" orientation="VERTICAL" prefHeight="152.0" prefWidth="220.0">
-               <items>
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #FFFFCC;">
-                     <children>
-                        <Button layoutX="-3.0" layoutY="-0.6666666666666666" mnemonicParsing="false" onAction="#profileButton" prefHeight="47.0" prefWidth="222.0" style="-fx-background-color: efbbcc;" styleClass="side" stylesheets="@../../../CssStyle/home.css" text="Profile" AnchorPane.topAnchor="-1.0">
-                           <font>
-                              <Font name="Arial Rounded MT Bold" size="12.0" />
-                           </font></Button>
-                     </children>
-                  </AnchorPane>
-                  <AnchorPane prefHeight="47.0" prefWidth="207.0" style="-fx-background-color: #FFFFCC;">
-                     <children>
-                        <Button mnemonicParsing="false" onAction="#friendRequestStartUp" prefHeight="47.0" prefWidth="219.0" style="-fx-background-color: efbbcc;" styleClass="side" stylesheets="@../../../CssStyle/home.css" text="Request">
-                           <font>
-                              <Font name="Arial Rounded MT Bold" size="12.0" />
-                           </font></Button>
-                     </children>
-                  </AnchorPane>
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #FFFFCC;">
-                     <children>
-                        <Button mnemonicParsing="false" onAction="#friendButton" prefHeight="50.0" prefWidth="219.0" style="-fx-background-color: efbbcc;" styleClass="side" stylesheets="@../../../CssStyle/home.css" text="Friend">
-                           <font>
-                              <Font name="Arial Rounded MT Bold" size="12.0" />
-                           </font></Button>
-                     </children>
-                  </AnchorPane>
-               </items>
-               <VBox.margin>
-                  <Insets left="50.0" right="20.0" top="120.0" />
-               </VBox.margin>
-            </SplitPane>
-         </children>
-      </VBox>
-   </left>
+   </right>
 </BorderPane>
