--- a/src/main/resources/com/example/demo/booking2.fxml
+++ b/src/main/resources/com/example/demo/booking2.fxml
@@ -102,7 +102,7 @@
       </Text>
       <VBox prefHeight="436.0" prefWidth="1219.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Destination ID for Booking:">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Destination for Booking:">
                <font>
                   <Font name="Arial Rounded MT Bold" size="15.0" />
                </font>
@@ -123,7 +123,7 @@
                   <Insets left="20.0" top="30.0" />
                </VBox.margin>
             </Text>
-            <TextArea fx:id="timeSlotsTextArea" prefHeight="200.0" prefWidth="200.0">
+            <TextArea fx:id="timeSlotsTextArea" editable="false" prefHeight="200.0" prefWidth="200.0">
                <VBox.margin>
                   <Insets left="20.0" right="20.0" top="10.0" />
                </VBox.margin>
