--- a/src/main/resources/com/example/demo/friendList.fxml
+++ b/src/main/resources/com/example/demo/friendList.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -109,19 +110,14 @@
                   <Insets left="80.0" right="100.0" top="40.0" />
                </VBox.margin>
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username">
+                  <Hyperlink text="Username" textFill="#121111">
                      <font>
                         <Font name="Arial Rounded MT Bold" size="15.0" />
                      </font>
                      <VBox.margin>
-                        <Insets left="40.0" top="20.0" />
+                        <Insets left="40.0" top="15.0" />
                      </VBox.margin>
-                  </Text>
-                  <Button mnemonicParsing="false" text="View Profile">
-                     <VBox.margin>
-                        <Insets left="600.0" top="-23.0" />
-                     </VBox.margin>
-                  </Button>
+                  </Hyperlink>
                </children>
             </VBox>
          </children>
@@ -153,7 +149,10 @@
                   </AnchorPane>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: ffdde6;">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#friendListStartUp" prefHeight="51.0" prefWidth="219.0" style="-fx-background-color: efbbcc;" styleClass="side" stylesheets="@../../../CssStyle/home.css" text="Friend" />
+                        <Button mnemonicParsing="false" onAction="#friendListStartUp" prefHeight="51.0" prefWidth="219.0" style="-fx-background-color: efbbcc;" styleClass="side" stylesheets="@../../../CssStyle/home.css" text="Friend">
+                           <font>
+                              <Font name="Arial Rounded MT Bold" size="12.0" />
+                           </font></Button>
                      </children>
                   </AnchorPane>
                </items>
