--- a/src/main/resources/com/example/demo/personalProfileYS.fxml
+++ b/src/main/resources/com/example/demo/personalProfileYS.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -169,6 +170,24 @@
                   </Label>
                </children>
             </VBox>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Add New Friend:">
+               <VBox.margin>
+                  <Insets top="50.0" />
+               </VBox.margin>
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="15.0" />
+               </font>
+            </Text>
+            <TextField maxWidth="-Infinity" prefHeight="25.0" prefWidth="251.0">
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </TextField>
+            <Button mnemonicParsing="false" text="Send Request">
+               <VBox.margin>
+                  <Insets left="280.0" top="-25.0" />
+               </VBox.margin>
+            </Button>
          </children>
          <BorderPane.margin>
             <Insets />
