--- a/src/main/resources/com/example/demo/ProfilePa.fxml
+++ b/src/main/resources/com/example/demo/ProfilePa.fxml
@@ -1,103 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="473.0" prefWidth="657.0" style="-fx-background-color: ffdde6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.personalProfilePaController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="375.0" prefWidth="600.0" style="-fx-background-color: ffdde6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.viewProfilePaController">
    <children>
-      <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: ffe4e1;">
-         <children>
-            <ImageView fitHeight="53.0" fitWidth="148.0" pickOnBounds="true" preserveRatio="true">
-               <HBox.margin>
-                  <Insets left="10.0" top="10.0" />
-               </HBox.margin>
-               <image>
-                  <Image url="@../../../logowithbg.png" />
-               </image>
-            </ImageView>
-            <Pane prefHeight="73.0" prefWidth="594.0">
-               <HBox.margin>
-                  <Insets left="100.0" />
-               </HBox.margin>
-            </Pane>
-            <HBox alignment="TOP_RIGHT" prefHeight="73.0" prefWidth="772.0">
-               <children>
-                  <Button mnemonicParsing="false" onAction="#homeButton" prefHeight="73.0" prefWidth="78.0" style="-fx-background-color: NONE;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Home">
-                     <HBox.margin>
-                        <Insets left="10.0" />
-                     </HBox.margin>
-                     <font>
-                        <Font name="Arial Rounded MT Bold" size="12.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#quizButton" prefHeight="73.0" prefWidth="73.0" style="-fx-background-color: none;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Quiz">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                     <font>
-                        <Font name="Arial Rounded MT Bold" size="12.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#eventButton" prefHeight="73.0" prefWidth="75.0" style="-fx-background-color: none;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Event">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                     <font>
-                        <Font name="Arial Rounded MT Bold" size="12.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#bookingButton" prefHeight="73.0" prefWidth="81.0" style="-fx-background-color: none;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Booking">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                     <font>
-                        <Font name="Arial Rounded MT Bold" size="12.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#leaderBoardButton" prefHeight="79.0" prefWidth="111.0" style="-fx-background-color: none;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="LeaderBoard">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                     <font>
-                        <Font name="Arial Rounded MT Bold" size="12.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#profileButton" prefHeight="77.0" prefWidth="63.0" style="-fx-background-color: ffb6c1;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Profile">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                     <font>
-                        <Font name="Arial Rounded MT Bold" size="12.0" />
-                     </font>
-                  </Button>
-                  <Button alignment="CENTER" mnemonicParsing="false" onAction="#logOutButton" prefHeight="73.0" prefWidth="75.0" style="-fx-background-color: none;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Log Out">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                     <font>
-                        <Font name="Arial Rounded MT Bold" size="12.0" />
-                     </font>
-                  </Button>
-               </children>
-            </HBox>
-         </children>
-      </HBox>
-      <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="300.0" prefWidth="815.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
+      <Label fx:id="usernameTitle" text="Label">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="30.0" />
+         </font>
+         <VBox.margin>
+            <Insets left="195.0" top="30.0" />
+         </VBox.margin>
+      </Label>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Profile of">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="30.0" />
+         </font>
+         <VBox.margin>
+            <Insets left="50.0" top="-35.0" />
+         </VBox.margin>
+      </Text>
+      <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="226.0" prefWidth="500.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Email">
                <font>
                   <Font name="Arial Rounded MT Bold" size="15.0" />
                </font>
                <VBox.margin>
-                  <Insets left="40.0" top="40.0" />
+                  <Insets left="40.0" top="20.0" />
                </VBox.margin>
             </Text>
             <Label fx:id="email" text="Label">
@@ -123,7 +57,7 @@
                   <Font name="Arial Rounded MT Bold" size="15.0" />
                </font>
                <VBox.margin>
-                  <Insets left="40.0" top="60.0" />
+                  <Insets left="40.0" top="40.0" />
                </VBox.margin>
             </Text>
             <Label fx:id="role" text="Label">
@@ -159,7 +93,7 @@
             </Label>
          </children>
          <VBox.margin>
-            <Insets bottom="100.0" top="100.0" />
+            <Insets left="45.0" top="10.0" />
          </VBox.margin>
       </VBox>
    </children>
