--- a/src/main/resources/com/example/demo/personalProfileYS.fxml
+++ b/src/main/resources/com/example/demo/personalProfileYS.fxml
@@ -178,15 +178,18 @@
                   <Font name="Arial Rounded MT Bold" size="15.0" />
                </font>
             </Text>
-            <TextField maxWidth="-Infinity" prefHeight="25.0" prefWidth="251.0">
+            <TextField fx:id="newFriendUsername" maxWidth="-Infinity" prefHeight="25.0" prefWidth="315.0" promptText="Enter the username or email you would like to search ...">
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
             </TextField>
-            <Button mnemonicParsing="false" text="Send Request">
+            <Button mnemonicParsing="false" onAction="#viewProfile" text="View Profile">
                <VBox.margin>
-                  <Insets left="280.0" top="-25.0" />
+                  <Insets left="325.0" top="-25.0" />
                </VBox.margin>
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="12.0" />
+               </font>
             </Button>
          </children>
          <BorderPane.margin>
