--- a/src/main/resources/com/example/demo/booking.fxml
+++ b/src/main/resources/com/example/demo/booking.fxml
@@ -6,17 +6,18 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="654.0" prefWidth="705.0" style="-fx-background-color: fddde6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.bookingController">
-   <children>
-      <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: ffe4e1;">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="526.0" prefWidth="1271.0" style="-fx-background-color: #FFE5B6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.bookingController">
+   <top>
+      <HBox prefHeight="73.0" prefWidth="629.0" style="-fx-background-color: ffe4e1;" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="53.0" fitWidth="148.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="53.0" fitWidth="205.0" pickOnBounds="true" preserveRatio="true">
                <HBox.margin>
                   <Insets left="10.0" top="10.0" />
                </HBox.margin>
@@ -24,16 +25,16 @@
                   <Image url="@../../../logowithbg.png" />
                </image>
             </ImageView>
-            <Pane maxWidth="-Infinity" prefHeight="74.0" prefWidth="506.0">
+            <Pane prefHeight="73.0" prefWidth="588.0">
                <HBox.margin>
                   <Insets left="100.0" />
                </HBox.margin>
             </Pane>
-            <HBox alignment="TOP_RIGHT" prefHeight="73.0" prefWidth="557.0">
+            <HBox alignment="TOP_RIGHT" prefHeight="73.0" prefWidth="772.0">
                <children>
                   <Button mnemonicParsing="false" onAction="#homeButton" prefHeight="73.0" prefWidth="78.0" style="-fx-background-color: none;" styleClass="barItem" stylesheets="@../../../CssStyle/home.css" text="Home">
                      <HBox.margin>
-                        <Insets />
+                        <Insets left="10.0" />
                      </HBox.margin>
                      <font>
                         <Font name="Arial Rounded MT Bold" size="12.0" />
@@ -91,77 +92,86 @@
             </HBox>
          </children>
       </HBox>
-      <Text fill="#374a72" strokeType="OUTSIDE" strokeWidth="0.0" text="Booking">
-         <font>
-            <Font name="Showcard Gothic" size="50.0" />
-         </font>
-         <VBox.margin>
-            <Insets top="30.0" />
-         </VBox.margin>
-      </Text>
-      <VBox prefHeight="401.0" prefWidth="476.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
+   </top>
+   <center>
+      <VBox alignment="TOP_CENTER" prefHeight="453.0" prefWidth="707.0" style="-fx-background-color: fddde6;" BorderPane.alignment="CENTER">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Booking for:">
+            <Text fill="#374a72" strokeType="OUTSIDE" strokeWidth="0.0" text="Booking">
                <font>
-                  <Font name="Arial Rounded MT Bold" size="15.0" />
+                  <Font name="Showcard Gothic" size="50.0" />
                </font>
                <VBox.margin>
-                  <Insets left="20.0" top="20.0" />
+                  <Insets top="40.0" />
                </VBox.margin>
             </Text>
-            <ChoiceBox prefHeight="25.0" prefWidth="191.0">
+            <VBox prefHeight="401.0" prefWidth="476.0" style="-fx-background-color: rgba(255,255,255,.5); -fx-background-radius: 20;">
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Destination for Booking:">
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="15.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets left="20.0" top="20.0" />
+                     </VBox.margin>
+                  </Text>
+                  <ChoiceBox fx:id="destinationChoiceBox" onMouseClicked="#destinationSelected" prefHeight="25.0" prefWidth="191.33333333333334">
+                     <VBox.margin>
+                        <Insets left="20.0" top="10.0" />
+                     </VBox.margin>
+                  </ChoiceBox>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Booking for:">
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="15.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets left="300.0" top="-53.0" />
+                     </VBox.margin>
+                  </Text>
+                  <ChoiceBox fx:id="childChoiceBox" prefHeight="25.0" prefWidth="191.0">
+                     <VBox.margin>
+                        <Insets left="300.0" top="10.0" />
+                     </VBox.margin>
+                  </ChoiceBox>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Available Time Slot">
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="15.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets left="20.0" top="30.0" />
+                     </VBox.margin>
+                  </Text>
+                  <TextArea fx:id="timeSlotsTextArea" editable="false" prefHeight="158.0" prefWidth="436.0">
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" top="10.0" />
+                     </VBox.margin>
+                  </TextArea>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Enter a Time Slot：">
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="15.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets left="20.0" top="20.0" />
+                     </VBox.margin>
+                  </Text>
+                  <ChoiceBox fx:id="timeSlotBooking" prefHeight="25.0" prefWidth="191.33333333333334">
+                     <VBox.margin>
+                        <Insets left="20.0" top="10.0" />
+                     </VBox.margin>
+                  </ChoiceBox>
+                  <Button mnemonicParsing="false" onAction="#bookDestination" text="Booking">
+                     <VBox.margin>
+                        <Insets bottom="20.0" left="250.0" right="100.0" top="-26.0" />
+                     </VBox.margin>
+                  </Button>
+               </children>
                <VBox.margin>
-                  <Insets left="20.0" top="10.0" />
+                  <Insets left="300.0" right="300.0" top="20.0" />
                </VBox.margin>
-            </ChoiceBox>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Destination for Booking:">
-               <font>
-                  <Font name="Arial Rounded MT Bold" size="15.0" />
-               </font>
-               <VBox.margin>
-                  <Insets left="300.0" top="-53.0" />
-               </VBox.margin>
-            </Text>
-            <ChoiceBox fx:id="destinationChoiceBox" onMouseClicked="#destinationSelected" prefHeight="25.0" prefWidth="191.33333333333334">
-               <VBox.margin>
-                  <Insets left="300.0" top="10.0" />
-               </VBox.margin>
-            </ChoiceBox>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Available Time Slot">
-               <font>
-                  <Font name="Arial Rounded MT Bold" size="15.0" />
-               </font>
-               <VBox.margin>
-                  <Insets left="20.0" top="30.0" />
-               </VBox.margin>
-            </Text>
-            <TextArea fx:id="timeSlotsTextArea" editable="false" prefHeight="158.0" prefWidth="436.0">
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" top="10.0" />
-               </VBox.margin>
-            </TextArea>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Enter a Time Slot：">
-               <font>
-                  <Font name="Arial Rounded MT Bold" size="15.0" />
-               </font>
-               <VBox.margin>
-                  <Insets left="20.0" top="20.0" />
-               </VBox.margin>
-            </Text>
-            <ChoiceBox fx:id="timeSlotBooking" prefHeight="25.0" prefWidth="191.33333333333334">
-               <VBox.margin>
-                  <Insets left="20.0" top="10.0" />
-               </VBox.margin>
-            </ChoiceBox>
-            <Button mnemonicParsing="false" onAction="#bookDestination" text="Booking">
-               <VBox.margin>
-                  <Insets bottom="20.0" left="250.0" right="100.0" top="-26.0" />
-               </VBox.margin>
-            </Button>
+            </VBox>
          </children>
-         <VBox.margin>
-            <Insets left="300.0" right="300.0" top="20.0" />
-         </VBox.margin>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
       </VBox>
-   </children>
-</VBox>
+   </center>
+</BorderPane>
